1.1.0
   - bug [10938] "FlowMapCreator skal oprette en liste af instanser af IPluggable"
   - bug [10946] "Fjern XMLHarvester fra koden."
   - bug [10913] "Datadockmanager bruger DatadockJobsMap til verificering"
   - bug [10945] "Få alias argumentet væk fra workflows.xml"
   - bug [10912] "Alle spor af indexingAlias skal væk"
   - bug [10911] "Indfør indexingAlias i PTI_jobs_xml og lad det plugin der skal bruge det hente det frem"
   - bug [10809] "IndexingAlias skal ud af CargoContainerens add metode"
   - bug [10852] "ScriptMethodsForReviewRelation.createRelation() skal kodes om til at kunne tage genrelle relationer"
   - bug [10769] "DatadockJob er en overflødig klasse"
   - bug [10105] "Fjern funktionen getData fra harvesterne"
   - bug [10690] "Sikring af at data i JavaScripts i samme scopes ikke bliver delt"
   - bug [10825] "Potentielt problem i brug af globale variable i JavaScripts"
   - bug [10689] "Fornuftig håndtering af exceptions skal implementeres i RhinoWrapper"
   - bug [10495] "Ændinger i IPLuggable"
   - bug [10075] "Ændringer i jobs.xml formatet"
   - bug [10073] "DatadockThread skal ikke længere skelne mellem plugin typer"
   - bug [10071] "Alle plugins modtager en IObjectRepository instans"
   - bug [10071] "Alle plugins modtager en IObjectRepository instans"
part of the cleaning and taking steps towards a more robust and uniform flow of data   - bug [10467] "jmockit skal opgraderes til en version, hvor Invocations.any* er med. Skal også merges ned i trunk."
   - bug [10093] "FileHarvesterLight skal have success og failure kataloger"
   - bug [9766] "CargoContainerTest kalder metode der ikke findes"